[package]
name = "smcan"
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
description = "A no_std rust crate to generate and parse CAN Frames for the SM-CAN protocol."
homepage = "https://github.com/saronic-technologies/smcan-rs"
repository = "https://github.com/saronic-technologies/smcan-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11.2"
embedded-can = "0.4.1"

[dev-dependencies]
anyhow = "1.0.72"
socketcan = "2.0.0"
